--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "homepage": "https://github.com/cezary/react-favicon",
   "peerDependencies": {
-    "react": ">=0.12.0 < 0.14.0"
+    "react": "^0.14.0"
   },
   "devDependencies": {
-    "babel": "^5.1.10"
+    "babel": "^5.8.23"
   }
 }
